CHANGES
=======

0.3 (unreleased)
----------------

- Skip tests if node.js is not available. Skipping tests only works properly in
  Python >= 2.7, though. (#9458)


0.2 (2011-08-24)
----------------

- Implement custom error ignores (#9456).


0.1 (2011-08-10)
----------------

- first release.